<resources>
    <string name="app_name">Gott</string>
    <string name="check">CHECK INTERNET</string>
    <string name="check_bt">CHECK BLUETOOTH</string>
    <string name="ble">CHECK BLUETOOTH</string>
    <string name="start">START</string>
    <string name="off">TURN OFF</string>
    <string name="on">TURN ON</string>
    <string name="error_txt">Error loading data from Google Books API</string>
    <string name="text_title">TEXT TITLE</string>
    <string name="subtitle">nothing big</string>
    <string name="publishedDate">Published Date</string>
    <string name="publisher">Publisher</string>
    <string name="search">search</string>
</resources>
